[project]
name = "market_monitor"
version = "1.0"
description = "Market monitor project developed by Sella Financial Markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "attrs>=25.4.0",
    "authlib>=1.6.5",
    "blpapi>=3.24.6",
    "cachetools>=5.3.0",
    "certifi>=2026.1.4",
    "confluent-kafka>=2.13.0",
    "fastavro>=1.12.1",
    "httpx>=0.28.1",
    "joblib>=1.3.0",
    "matplotlib>=3.9.0",
    "openpyxl>=3.1.2",
    "pyarrow>=14.0.0",
    "pyqt5>=5.15.11",
    "questionary>=2.0.0",
    "redis>=6.2.0",
    "ruamel-yaml>=0.18.6",
    "scipy>=1.16.0",
    "sfm-data-provider>=1.2.76735",
    "sfm-timescaledb-queries>=1.0.72117",
    "tqdm>=4.64.0",
    "watchdog>=2.2.1",
    "xlwings>=0.31.4",
]


[project.scripts]
run-strategy = "market_monitor.entry.run_strategy:main"
run-mock = "market_monitor.entry.run_mock:main"
run-dashboard = "market_monitor.entry.run_dashboard:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

find-links = [
  '\\nas1bes\AreaFinanza\SHARE\PROGETTI ML\Python\python3_11\python packages',
#  "file:///X:/Python/python3_11"
]

# IMPORTANTE: disabilita l'index di default (PyPI)
no-index = true


[dependency-groups]
dev = [
    "pyinstaller>=6.10.0",
#    "bsh-data-provider @ file:///C:/AFMachineLearning/Libraries/BshDataProviderDeveloper",
]
